# pydantic-custom-types

./: LICENSE  README.md  pyproject.toml  tox.ini
pydantic_custom_types/: custom_type.py  hex_type.py
tests/: test_hex_type.py
